5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1800_2571.log
== TEST (2019-06-11 11:38:53) 
-- CODE:
strg=input('')

saida = ''

for i in range(len(strg)):
	if(strt[i].upper() =!'a'):
		saida = saida + strt[i]
print(saida)	
	

-- ERROR:
File "XXXX", line 6
    if(strt[i].upper() =!'a'):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:39:01) 
-- CODE:
strg=input('')

saida = ''

for i in range(len(strg)):
	if(strt[i].upper() =!'a'):
		saida = saida + strt[i]
print(saida)	
	

-- ERROR:
File "XXXX", line 6
    if(strt[i].upper() =!'a'):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:39:13) 
-- CODE:
strg=input('')

saida = ''

for i in range(len(strg)):
	if strt[i].upper() =!'a':
		saida = saida + strt[i]
print(saida)	
	

-- ERROR:
File "XXXX", line 6
    if strt[i].upper() =!'a':
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:39:26) 
-- CODE:
strt=input('')

saida = ''

for i in range(len(strg)):
	if strt[i].upper() =!'a':
		saida = saida + strt[i]
print(saida)	
	

-- ERROR:
File "XXXX", line 6
    if strt[i].upper() =!'a':
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:39:52) 
-- CODE:
strt=i nput('')

saida = ''

for i in range(len(strg)):
	if strt[i].upper() !='a':
		saida = saida + strt[i]
print(saida)	
	

-- ERROR:
File "XXXX", line 1
    strt=i nput('')
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:39:57) 
-- CODE:
strt=input('')

saida = ''

for i in range(len(strg)):
	if strt[i].upper() !='a':
		saida = saida + strt[i]
print(saida)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    for i in range(len(strg)):
NameError: name 'strg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:40:12) 
-- CODE:
strt=input('')

saida = ''

for i in range(len(strg)):
	if strt[i].upper() !='a':
		saida = saida + strt[i]
print(saida)	
	

-- EXECUTION TIME:
0.576419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2571/main.py", line 5, in <module>
    for i in range(len(strg)):
NameError: name 'strg' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:40:43) 
-- CODE:
strt = input('')

saida = ''

for i in range(len(strt)):
	if strt[i].upper() !='a':
		saida = saida + strt[i]
print(saida)	
	

-- EXECUTION TIME:
0.860721
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computacao-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:41:09) 
-- CODE:
strt = input('')

saida = ''

for i in range(len(strt)):
	if strt[i].upper() !='a':
		saida = saida + strt[i]
print(saida)	
	

-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:42:04) 
-- CODE:
strt = input('')

saida = ''

for i in range(len(strt)):
	if strt[i].upper() !='a':
		saida = saida + strt[i]
print(saida)	
	

-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:42:32) 
-- CODE:
strt = input('')

saida = ''

for i in range(len(strt)):
	if strt[i].upper() != 'a':
		saida = saida + strt[i]
print(saida)	
	

-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:44:38) 
-- CODE:
strt = input('')

saida = ''

for i in range(len(strt)):
	if strt[i].upper() != 'A'
		saida = saida + strt[i]
print(saida)		
-- ERROR:
File "XXXX", line 6
    if strt[i].upper() != 'A'
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:44:45) 
-- CODE:
strt = input('')

saida = ''

for i in range(len(strt)):
	if strt[i].upper() != 'A':
		saida = saida + strt[i]
print(saida)		
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:44:53) 
-- CODE:
strt = input('')

saida = ''

for i in range(len(strt)):
	if strt[i].upper() != 'A':
		saida = saida + strt[i]
print(saida)		
-- EXECUTION TIME:
0.855031
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
